@@ -64,18 +64,14 @@ create_menu                                     (GtkWidget *label)
     hildon_app_menu_append (menu, GTK_BUTTON (button));
 
     /* Filters */
-    button = gtk_toggle_button_new_with_label ("filter one");
+    button = gtk_radio_button_new_with_label (NULL, "filter one");
     g_signal_connect (button, "clicked", G_CALLBACK (menu_button_clicked), label);
-    hildon_app_menu_add_filter (menu, GTK_BUTTON (button), NULL);
-
-    button = gtk_radio_button_new_with_label (NULL, "filter two");
-    g_signal_connect (button, "clicked", G_CALLBACK (menu_button_clicked), label);
-    group = hildon_app_menu_add_filter (menu, GTK_BUTTON (button), NULL);
+    hildon_app_menu_add_filter (menu, GTK_BUTTON (button));
     gtk_toggle_button_set_mode (GTK_TOGGLE_BUTTON (button), FALSE);
 
-    button = gtk_radio_button_new_with_label_from_widget (GTK_RADIO_BUTTON (button), "filter three");
+    button = gtk_radio_button_new_with_label_from_widget (GTK_RADIO_BUTTON (button), "filter two");
     g_signal_connect (button, "clicked", G_CALLBACK (menu_button_clicked), label);
-    hildon_app_menu_add_filter (menu, GTK_BUTTON (button), group);
+    hildon_app_menu_add_filter (menu, GTK_BUTTON (button));
     gtk_toggle_button_set_mode (GTK_TOGGLE_BUTTON (button), FALSE);
 
     return menu;
